--- a/faq.html
+++ b/faq.html
@@ -8,42 +8,64 @@
 		<link href="assets/styles.css" rel="stylesheet">
 		<style>
 
+.faq{
+	margin-top: 2em;
+}
 
 summary::before {
 	content: '+';
+	margin-left: 0.5em;
+    right: 10px;
+    font-size: 30px;
+    transition: transform 0.3s ease;
 }
 
 details{
 	border: black solid 1px;
 	border-radius: 5px;
+	margin-bottom: 1em;
+	p{
+		padding: 1em;
+		padding-top: 0;
+	}
+}
+
+summary{
+	cursor: pointer;
+	list-style-type: none;
+	display: flex;
+	align-items: center;
+	gap: 0.5em;
+	justify-content: left;
 }
 
 details[open] summary::before {
-    content: '×';  
+    content: '+';  
+	transform: rotate(45deg);
 }
 
 .details-1[open]{
-	background-color: #A675F5;;
+	background-color: #A675F5;
+	border: none;
 
 }
 
 .details-2[open]{
 	background-color: #66E5BF;
-
+	border: none;
 }
 
 .details-3[open]{
 	background-color: #FFFC86;
-
+	border: none;
 }
 
 details summary::-webkit-details-marker {
   display:none;
 }
 
-
 </style>
-	</head>
+</head>
 	<body>
 		<h1>Veelgestelde vragen</h1>
 
@@ -63,15 +85,8 @@ details summary::-webkit-details-marker {
 				<summary>Wat is een Associate Degree?</summary>
 				<p>Een Associate degree-opleiding is een tweejarige hbo-opleiding op niveau 5. Een Ad slaat een brug tussen het mbo-4 (niveau 4) en een hbo-bachelor (niveau 6). Met een Associate degree kies je voor een praktijkgerichte hbo-opleiding; je wordt opgeleid voor een beroep dat aansluit bij de praktijk. In dit geval word je opgeleid tot ‘frontend designer/developer' of kortweg ‘frontender’. Frontenders ontwerpen en maken interactieve, toegankelijke toepassingen voor het web. Frontenders werken binnen het gebied van software development, interactieontwerp en digitaal visueel ontwerp. Na afronding van deze tweejarige hbo-opleiding, krijg je een wettelijk erkend hbo-diploma met de graad Associate degree. Met dit Ad-diploma kun je direct aan de slag in het werkveld of doorstromen naar de bacheloropleiding Communication and Multimedia Design (CMD).</p>
 			</details>
-			
-			<!-- Voeg hier meer FAQ-items toe -->
 		</section>
 
-
-		
-
-
-		<!-- Hint: Dit stukje HTML geeft het misschien al weg :) -->
 		<details open>
 			<summary>Demo video</summary>
 			<video src="assets/faq.mp4" width="765" height="769" controls muted autoplay loop>
