feat: add advanced control switch, #3

--- a/switch.html
+++ b/switch.html
@@ -48,6 +48,12 @@
 
 input:checked + .slider:before {
   transform: translateX(45px);
+  content: "AAN";
+  font-weight: bold;
+}
+
+input:checked + .slider {
+	background-color: #66E5BF;
 }
 
 </style>
