--- a/menu.html
+++ b/menu.html
@@ -15,10 +15,10 @@
 	width: 75%;
 	height: 100%;
 	background-color: #66E5BF;
-	transition: 0.3s ease;
+	transition: left 0.3s ease-in-out;
 	padding-top: 60px;
-	z-index: 1;
-  }
+	z-index: 1000;
+}
 
 .sidebar nav ul {
 	list-style-type: none;
@@ -36,26 +36,9 @@
 	font-weight: bold;
 }
 
-#menu:target {
-	left: 0;
-}
-
-.open-btn:hover {
-	background-color: #050542;
-	color: #66E5BF;
-}
-
 .sidebar nav ul li a:hover {
   color: #66E5BF;
   background-color: #050542;
-}
-
-.close-btn {
-  position: absolute;
-  top: 20px;
-  right: 25px;
-  font-size: 36px;
-  cursor: pointer;
 }
 
 .open-btn {
@@ -70,19 +53,44 @@
   transition: background-color 0.3s ease;
 }
 
+.open-btn:hover {
+	background-color: #050542;
+	color: #66E5BF;
+}
+
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  font-size: 36px;
+  cursor: pointer;
+}
+
 
 </style>
 		<script type="module">
-			/* Schrijf hier eventueel je client-side JavaScript */
+			document.addEventListener("DOMContentLoaded", function() {
+			const openBtn = document.querySelector('.open-btn');  // De knop om het menu te openen
+			const closeBtn = document.querySelector('.close-btn'); // De knop om het menu te sluiten
+			const sidebar = document.querySelector('.sidebar');  // Het menu zelf
 
-			/* Hint: dit component kan volledig met CSS, maar met JS kun je 'm enhancen */
+			// Wanneer de gebruiker op de 'open' knop klikt, het menu zichtbaar maken
+			openBtn.addEventListener('click', function() {
+				sidebar.style.left = '0';  // Het menu verschuift naar de rechterkant van het scherm
+			});
+
+			// Wanneer de gebruiker op de 'close' knop klikt, het menu weer naar links verbergen
+			closeBtn.addEventListener('click', function() {
+				sidebar.style.left = '-75%';  // Het menu verschuift weer naar de linkerkant van het scherm
+			});
+			});
 		</script>
 	</head>
 	<body>
 		<main>
 			<h1>Mobiel menu</h1>
 
-			<a href="#menu" class="open-btn">Menu</a>
+			<a class="open-btn">Menu</a>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum eget elit eu tincidunt. Donec gravida nulla at justo sollicitudin, hendrerit faucibus diam tincidunt. Pellentesque porta neque quis nunc laoreet congue. Sed porttitor nec tellus nec semper. Cras pharetra dictum risus ut sagittis. Aliquam in iaculis arcu. Nulla sit amet diam sit amet mauris placerat laoreet eu vel turpis. Vivamus ac massa ut diam gravida elementum ut nec nulla. Integer vel felis massa. Quisque facilisis enim ornare ultricies mattis. Fusce porta rhoncus ex. Nunc viverra orci at leo fermentum convallis. Morbi sodales, lectus congue aliquam maximus, metus ipsum placerat turpis, vitae venenatis metus erat vel eros. Vestibulum lobortis accumsan elit nec maximus. Vivamus mollis ullamcorper felis, id aliquet tellus volutpat at.</p>
 			<p>In ante sem, faucibus sit amet nisl ut, efficitur mattis augue. Aenean fringilla lorem id metus ultrices bibendum. Quisque eleifend enim purus, eu bibendum mauris blandit nec. Donec vitae purus sed eros ullamcorper vehicula sit amet eu massa. Vestibulum eget mi vel tellus pharetra convallis quis quis nunc. Maecenas bibendum neque sit amet neque ultrices sollicitudin. Donec viverra arcu nec urna accumsan pharetra. Donec pharetra lacinia elementum.</p>
@@ -101,8 +109,8 @@
 			<p>Suspendisse malesuada, nulla eget iaculis fermentum, libero dolor vestibulum urna, ut auctor dolor diam ut dolor. Nullam mollis congue luctus. Fusce nulla dolor, faucibus nec volutpat eget, consequat quis nisl. Cras id diam efficitur, congue lectus ac, vulputate leo. Morbi odio velit, finibus id ornare sit amet, luctus ut eros. Fusce fringilla eu diam quis tempor. Proin pretium purus a fringilla semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin lorem diam, laoreet at lectus quis, lobortis tempor tortor. Vivamus semper, ex convallis iaculis suscipit, risus augue bibendum sapien, nec volutpat lacus quam finibus arcu. Nunc non consectetur eros, eu viverra metus. Aliquam nisl risus, condimentum et sapien id, rutrum interdum odio. Nulla facilisi. Ut ac egestas quam.</p>
 			
 			
-			<section id="menu" class="sidebar">
-				<a href="#" class="close-btn">
+			<section class="sidebar">
+				<a class="close-btn">
 					<svg viewBox="0 0 32 32" width="32" height="32">
 						<title>Sluiten</title>
 						<path d="M31.708 25.708c-0-0-0-0-0-0l-9.708-9.708 9.708-9.708c0-0 0-0 0-0 0.105-0.105 0.18-0.227 0.229-0.357 0.133-0.356 0.057-0.771-0.229-1.057l-4.586-4.586c-0.286-0.286-0.702-0.361-1.057-0.229-0.13 0.048-0.252 0.124-0.357 0.228 0 0-0 0-0 0l-9.708 9.708-9.708-9.708c-0-0-0-0-0-0-0.105-0.104-0.227-0.18-0.357-0.228-0.356-0.133-0.771-0.057-1.057 0.229l-4.586 4.586c-0.286 0.286-0.361 0.702-0.229 1.057 0.049 0.13 0.124 0.252 0.229 0.357 0 0 0 0 0 0l9.708 9.708-9.708 9.708c-0 0-0 0-0 0-0.104 0.105-0.18 0.227-0.229 0.357-0.133 0.355-0.057 0.771 0.229 1.057l4.586 4.586c0.286 0.286 0.702 0.361 1.057 0.229 0.13-0.049 0.252-0.124 0.357-0.229 0-0 0-0 0-0l9.708-9.708 9.708 9.708c0 0 0 0 0 0 0.105 0.105 0.227 0.18 0.357 0.229 0.356 0.133 0.771 0.057 1.057-0.229l4.586-4.586c0.286-0.286 0.362-0.702 0.229-1.057-0.049-0.13-0.124-0.252-0.229-0.357z"></path>
